syntax = "proto3";
package zetachain.zetacore.fungible;

option go_package = "github.com/zeta-chain/zetacore/x/fungible/types";

message ForeignCoins {
  string index = 1; 
  string zRC4ContractAddress = 2; 
  string eRC20ContractAddress = 3; 
  string foreignChain = 4; 
  uint32 decimals = 5;
  string name = 6; 
  string symbol = 7; 
  string coinType = 8; 
  
}

